--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="google-site-verification"
+      content="eVQkpMj5Dk1ZjdpCpDPCEInMwNYu-_eqED5fxfsFjzE"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
