Added picture element in html with webp for large images

--- a/index.html
+++ b/index.html
@@ -81,12 +81,20 @@
           </section>
           <section>
             <h2>Structure</h2>
+            <picture>
+              <source
+                srcset="img/hiv-virus-capsid-960.webp"
+                type="image/webp"
+                class="center"
+              />
+              <img
+                src="img/hiv-virus-capsid-960.png"
+                alt="HIV virion and detail of capsid"
+                loading="lazy"
+                class="center"
+              />
+            </picture>
 
-            <img
-              src="img/hiv-virus-capsid-960.png"
-              alt="HIV virion and detail of capsid"
-              class="center"
-            />
             <p class="image-credit">
               Image created with
               <a
@@ -145,11 +153,19 @@
           <section>
             <h2>Life-cycle</h2>
             <div class="life-cycle-image-wrap">
-              <img
-                loading="lazy"
-                src="img/hiv-life-cycle-1320.png"
-                alt="HIV life-cycle"
-              />
+              <picture>
+                <source
+                  srcset="img/hiv-life-cycle-1320.webp"
+                  type="image/webp"
+                  class="center"
+                />
+                <img
+                  src="img/hiv-life-cycle-1320.png"
+                  alt="HIV life-cycle"
+                  loading="lazy"
+                  class="center"
+                />
+              </picture>
             </div>
             <p class="image-credit">
               Image adapted from “HIV Replication Cycle”, by BioRender.com
