Image optimisations and text edits

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
               <a href="#note1"><sup id="ref1">[1]</sup></a> states that genetic
               information moves only in one direction, from DNA to RNA to
               protein. However, in the 1970s the discovery of reverse
-              transcription, which converts RNA to DNA, required the addition of
-              an important qualification.
+              transcription, which converts RNA to DNA, required dogma to be
+              stated as: once the biological information is translated into
+              protein, it is not possible to go the other way.
             </p>
             <p>
-              Reverse transcriptase (RT), the enzyme that catalyses this
-              conversion, has now been found in all branches of life: bacteria,
-              archaea, eukaryotes and viruses
-              <a href="#note2"><sup id="ref2">[2]</sup></a
-              >. HIV is one such virus that uses RT as part of its strategy of
+              <strong>Reverse transcriptase</strong> (RT), the enzyme that
+              catalyses reverse transcription, has now been found in all
+              branches of life: bacteria, archaea, eukaryotes and viruses. HIV
+              is one of the viruses that use RT as part of its strategy of
               replication.
             </p>
           </header>
@@ -58,7 +58,7 @@
             <h2>Classification</h2>
             <p>
               The Baltimore Classification
-              <a href="#note3"><sup id="ref3">[3]</sup></a> of HIV is Group VI
+              <a href="#note2"><sup id="ref2">[2]</sup></a> of HIV is Group VI
               (+) ssRNA-RT.
             </p>
             <ul>
@@ -73,8 +73,8 @@
               </li>
               <li>
                 <p>
-                  'RT' here stands for 'retrovirus', i.e. a virus that uses
-                  reverse transcription.
+                  Note that 'RT' here stands for 'retrovirus', i.e. a virus that
+                  uses reverse transcription.
                 </p>
               </li>
             </ul>
@@ -122,7 +122,7 @@
                   <li>
                     <p>
                       <strong>The genomic material</strong>, i.e. two
-                      <a href="#note4"><sup id="ref4">[4]</sup></a>
+                      <a href="#note3"><sup id="ref3">[3]</sup></a>
                       strands of ssRNA (+),
                     </p>
                   </li>
@@ -136,14 +136,6 @@
                     <p>
                       <strong>Integrase</strong>, which incorporates viral cDNA
                       into the host cell's DNA, and
-                    </p>
-                  </li>
-                  <li>
-                    <p>
-                      <strong>Protease</strong>
-                      <a href="#note5"><sup id="ref5">[5]</sup></a
-                      >, which assembles the matrix, capsid and capsid contents
-                      after budding.
                     </p>
                   </li>
                 </ul>
@@ -206,8 +198,7 @@
                   together until the virus fuses with the host cell. The inner
                   contents of the virus are then released into the cell, and the
                   matrix and capsid proteins dissolve, releasing the viral RNA,
-                  RT, integrase, and protease <a href="#note5">(see note 5)</a>
-                  enzymes into the cytoplasm.
+                  and the RT and integrase enzymes into the cytoplasm.
                 </p>
               </li>
             </ol>
@@ -288,7 +279,6 @@
                   <p>
                     <span class="bold-special">3. Reverse transcription</span>.
                   </p>
-                  <!-- HAVE TO TAKE THIS OUT OF FLEX -->
                   <ul class="bullets">
                     <li>
                       <p>RT binds to the 3' end of the viral RNA (+).</p>
@@ -296,10 +286,10 @@
                     <li>
                       <p>
                         Using dNTPs
-                        <a href="#note6"><sup id="ref6">[6]</sup></a> in the
+                        <a href="#note4"><sup id="ref4">[4]</sup></a> in the
                         host cell, RT synthesises a complementary strand of cDNA
                         (-). Concurrently, RNase H
-                        <a href="#note7"><sup id="ref7">[7]</sup></a>
+                        <a href="#note5"><sup id="ref5">[5]</sup></a>
                         (not shown), a sub-domain of RT, denatures the RNA
                         strand.
                       </p>
@@ -503,7 +493,7 @@
             <h2>The Target of HIV: the Helper T-cell</h2>
             <p>
               The virus mainly targets Helper T-cells
-              <a href="#note8"><sup id="ref8">[8]</sup></a> (also known as
+              <a href="#note6"><sup id="ref6">[6]</sup></a> (also known as
               Helper T lymphocytes or CD4+ cells). These cells are crucial for
               the functioning of the adaptive immune system.
             </p>
@@ -594,41 +584,31 @@
           <ol>
             <li id="note1">
               <p>
-                See
+                For a full discussion of all of the postulates of the dogma See
                 <a
-                  href="https://bio.libretexts.org/Bookshelves/Introductory_and_General_Biology/Book%3A_Introductory_Biology_(CK-12)/04%3A_Molecular_Biology/4.01%3A_Central_Dogma_of_Molecular_Biology"
+                  href="https://warbletoncouncil.org/dogma-central-biologia-molecular-15110"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >The central dogma of molecular biology</a
+                  >Central dogma of molecular biology: molecules and processes
+                  involved</a
                 >. <a href="#ref1" class="ref">Back to text &#8593;</a>
               </p>
             </li>
+
             <li id="note2">
               <p>
-                Viruses are likened by
-                <a
-                  href="https://www.youtube.com/watch?v=BAIGi6etsVo"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Konstantin Lacic</a
-                >
-                to 'Vines around the tree of life". He also describes them as
-                'genetic nomads'.
-                <a href="#ref2" class="ref">Back to text &#8593;</a>
-              </p>
-            </li>
-            <li id="note3">
-              <p>
-                See
+                &OpenCurlyDoubleQuote;Baltimore classification is a system used
+                to classify viruses based on their manner of messenger RNA
+                (mRNA) synthesis.&CloseCurlyDoubleQuote; See
                 <a
                   href="https://en.wikipedia.org/wiki/Baltimore_classification"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Baltimore classification of viruses</a
-                >. <a href="#ref3" class="ref">Back to text &#8593;</a>
+                  >Baltimore classification</a
+                >. <a href="#ref2" class="ref">Back to text &#8593;</a>
               </p>
             </li>
-            <li id="note4">
+            <li id="note3">
               <p>
                 <em
                   >If the virion carries two strands of RNA, why is HIV
@@ -639,40 +619,26 @@
               </p>
               <p>
                 <em
-                  >Why there are two strands of viral RNA when only one strand
-                  of cDNA is synthesised from it?
+                  >Why are there are two strands of viral RNA when only one
+                  strand of cDNA is synthesised from it?
                 </em>
                 One strand is often sufficient for reverse transcription of
-                complementary DNA. However, viral RNA is not as well made as
+                complementary DNA. However, viral RNA is not as well formed as
                 cell RNA and can have missing nucleotides. In this event, RT is
                 able to switch from one viral RNA to the other transcribing
-                sections of RNA, and afterwards joining them into a single
-                strand of cDNA. For a more detailed discussion, see
+                sections of RNA from each and afterwards joining the transcribed
+                segments into single strand of cDNA. For a more detailed
+                discussion, see
                 <a
                   href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3056336/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >HIV-1 RNA Dimerization: It Takes Two to Tango</a
-                >. <a href="#ref4" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref3" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note5">
-              <p>
-                The fate of the protease on entering the host cell after fusion
-                is unclear &mdash; unclear in the sense that I have not been
-                able to find any definitive information on it. I cautiously
-                presume that it dissolves along with the capsid and matrix
-                proteins. What is clear is that the function of protease is to
-                cleave the polyprotein chains translated from the viral DNA into
-                the constituent parts of the budding virion (having cleaved
-                itself from the very same chains beforehand). The presence of
-                protease in the mature virion is thus the end of a process; it
-                remains in the virion as a residue of that process.
-                <a href="#ref5" class="ref">Back to text &#8593;</a>
-              </p>
-            </li>
-            <li id="note6">
+            <li id="note4">
               <p>
                 dNTPs (deoxyribonucleotide triphosphates) are the molecular
                 precursors of DNA. For more information, see
@@ -681,11 +647,11 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >Nucleoside triphosphate</a
-                >. <a href="#ref6" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref4" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note7">
+            <li id="note5">
               <p>
                 See
                 <a
@@ -693,11 +659,11 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >RNase H activity</a
-                >. <a href="#ref7" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref5" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note8">
+            <li id="note6">
               <p>
                 Based on AK YouTube lecture notes
                 <a
@@ -705,7 +671,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >HIV, AIDs and Helper T-cells'</a
-                >. <a href="#ref8" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref6" class="ref">Back to text &#8593;</a>
               </p>
             </li>
           </ol>
