Further text edit

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <a href="#note1"><sup id="ref1">[1]</sup></a> states that genetic
               information moves only in one direction, from DNA to RNA to
               protein. However, in the 1970s the discovery of reverse
-              transcription, which converts RNA to DNA, required dogma to be
-              stated as: once the biological information is translated into
+              transcription, which converts RNA to DNA, required the dogma to be
+              restated as: once the biological information is translated into
               protein, it is not possible to go the other way.
             </p>
             <p>
