--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
               The central dogma of molecular biology
               <a href="#note1"><sup id="ref1">[1]</sup></a> states that genetic
               information moves only in one direction, from DNA to RNA to
-              protein. However, in the 1970s the discovery of reverse
-              transcription, which converts RNA to DNA, required the dogma to be
-              restated as: once the biological information is translated into
-              protein, it is not possible to go the other way.
+              protein. However, in the 1970s the discovery of
+              <strong>reverse transcription</strong>, which converts RNA to DNA,
+              required the dogma to be restated as: once the biological
+              information is translated into protein, it is not possible to go
+              the other way.
             </p>
             <p>
               <strong>Reverse transcriptase</strong> (RT), the enzyme that
