Final (?) text edit

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           <ol>
             <li id="note1">
               <p>
-                For a full discussion of all of the postulates of the dogma See
+                For a full discussion of all of the postulates of the dogma see
                 <a
                   href="https://warbletoncouncil.org/dogma-central-biologia-molecular-15110"
                   target="_blank"
@@ -654,7 +654,7 @@
 
             <li id="note5">
               <p>
-                See
+                For details see
                 <a
                   href="https://www.thermofisher.com/uk/en/home/life-science/cloning/cloning-learning-center/invitrogen-school-of-molecular-biology/rt-education/reverse-transcriptase-attributes.html#rt_a2"
                   target="_blank"
