--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                   <li>
                     <p>
                       <strong>Reverse transcriptase (RT)</strong>, which
-                      synthesises complementary DNA (cDNA) from the RNA,
+                      synthesises complementary DNA (cDNA) from the RNA, and
                     </p>
                   </li>
                   <li>
                     <p>
                       <strong>Integrase</strong>, which incorporates viral cDNA
-                      into the host cell's DNA, and
+                      into the host cell's DNA.
                     </p>
                   </li>
                 </ul>
