Intro text edit

--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             <p>
               The central dogma of molecular biology
               <a href="#note1"><sup id="ref1">[1]</sup></a> states that genetic
-              information moves only in one direction, from DNA to RNA to
-              protein. However, in the 1970s the discovery of
+              information moves in one direction only, from DNA to RNA to
+              protein. However, after the discovery in the 1970s of
               <strong>reverse transcription</strong>, which converts RNA to DNA,
-              required the dogma to be restated as: once the biological
-              information is translated into protein, it is not possible to go
-              the other way.
+              the dogma was restated as: once the biological information is
+              translated into protein, it is not possible to go the other way.
             </p>
             <p>
               <strong>Reverse transcriptase</strong> (RT), the enzyme that
@@ -291,8 +290,9 @@
                         host cell, RT synthesises a complementary strand of cDNA
                         (-). Concurrently, RNase H
                         <a href="#note5"><sup id="ref5">[5]</sup></a>
-                        (not shown), a sub-domain of RT, denatures the RNA
-                        strand.
+                        (see &OpenCurlyDoubleQuote;More detail on reverse
+                        transcription&CloseCurlyDoubleQuote;, below), a
+                        sub-domain of RT, denatures the RNA strand.
                       </p>
                     </li>
                     <li>
@@ -309,8 +309,8 @@
             <div class="card">
               <div class="card-header border-bottom">
                 <h3 class="card-title">
-                  <span class="more-less">More</span> detail on Reverse
-                  Transcription
+                  <span class="more-less">More</span> detail on reverse
+                  transcription
                 </h3>
                 <button class="expand-button">+</button>
               </div>
@@ -654,7 +654,7 @@
 
             <li id="note5">
               <p>
-                For details see
+                For further details see
                 <a
                   href="https://www.thermofisher.com/uk/en/home/life-science/cloning/cloning-learning-center/invitrogen-school-of-molecular-biology/rt-education/reverse-transcriptase-attributes.html#rt_a2"
                   target="_blank"
@@ -671,7 +671,7 @@
                   href="https://www.youtube.com/watch?v=QqoezqZIA6c&t=68s"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >HIV, AIDs and Helper T-cells'</a
+                  >HIV, AIDs and Helper T-cells</a
                 >. <a href="#ref6" class="ref">Back to text &#8593;</a>
               </p>
             </li>
