Rewrote introduction - moved Central dogma to following section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,33 @@
 
             <h2>Introduction</h2>
             <p>
+              Since the 1980s, the continuing world-wide AIDS epidemic has
+              killed nearly 33 million
+              <a href="#note1"><sup id="ref1">[1]</sup></a> people. The efficacy
+              of the Human Immunodeficiency Virus (HIV), the cause of the
+              epidemic, resides in the following:
+            </p>
+            <ul>
+              <li>
+                it infects the cells that direct the workings of the immune
+                system, eventually suppressing the immune response altogether.
+              </li>
+              <li>
+                Its slow-acting nature means that its hosts are not aware of
+                being infected for significant amounts of time, allowing easy
+                spreading via sexual and oral fluid exchanges.
+              </li>
+              <li>
+                It integrates its own genome into that of the host cell's, thus
+                allowing it to multiply when the cell divides.
+              </li>
+            </ul>
+          </header>
+          <section>
+            <h2>The Central Dogma and Reverse Transcription</h2>
+            <p>
               The central dogma of molecular biology
-              <a href="#note1"><sup id="ref1">[1]</sup></a> states that genetic
+              <a href="#note2"><sup id="ref2">[2]</sup></a> states that genetic
               information moves in one direction only, from DNA to RNA to
               protein. However, after the discovery in the 1970s of
               <strong>reverse transcription</strong>, which converts RNA to DNA,
@@ -53,12 +78,12 @@
               is one of the viruses that use RT as part of its strategy of
               replication.
             </p>
-          </header>
+          </section>
           <section>
             <h2>Classification</h2>
             <p>
               The Baltimore Classification
-              <a href="#note2"><sup id="ref2">[2]</sup></a> of HIV is Group VI
+              <a href="#note3"><sup id="ref3">[3]</sup></a> of HIV is Group VI
               (+) ssRNA-RT.
             </p>
             <ul>
@@ -122,7 +147,7 @@
                   <li>
                     <p>
                       <strong>The genomic material</strong>, i.e. two
-                      <a href="#note3"><sup id="ref3">[3]</sup></a>
+                      <a href="#note4"><sup id="ref4">[4]</sup></a>
                       strands of ssRNA (+),
                     </p>
                   </li>
@@ -286,10 +311,10 @@
                     <li>
                       <p>
                         Using dNTPs
-                        <a href="#note4"><sup id="ref4">[4]</sup></a> in the
+                        <a href="#note5"><sup id="ref5">[5]</sup></a> in the
                         host cell, RT synthesises a complementary strand of cDNA
                         (-). Concurrently, RNase H
-                        <a href="#note5"><sup id="ref5">[5]</sup></a>
+                        <a href="#note6"><sup id="ref6">[6]</sup></a>
                         (see &OpenCurlyDoubleQuote;More detail on reverse
                         transcription&CloseCurlyDoubleQuote;, below), a
                         sub-domain of RT, denatures the RNA strand.
@@ -494,7 +519,7 @@
             <h2>The Target of HIV: the Helper T-cell</h2>
             <p>
               The virus mainly targets Helper T-cells
-              <a href="#note6"><sup id="ref6">[6]</sup></a> (also known as
+              <a href="#note7"><sup id="ref7">[7]</sup></a> (also known as
               Helper T lymphocytes or CD4+ cells). These cells are crucial for
               the functioning of the adaptive immune system.
             </p>
@@ -585,6 +610,17 @@
           <ol>
             <li id="note1">
               <p>
+                See AVERT,
+                <a
+                  href="http://https://www.avert.org/global-hiv-and-aids-statistics"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Global HIV and AIDS statistics</a
+                >. <a href="#ref1" class="ref">Back to text &#8593;</a>
+              </p>
+            </li>
+            <li id="note2">
+              <p>
                 For a full discussion of all of the postulates of the dogma see
                 <a
                   href="https://warbletoncouncil.org/dogma-central-biologia-molecular-15110"
@@ -592,11 +628,11 @@
                   rel="noopener noreferrer"
                   >Central dogma of molecular biology: molecules and processes
                   involved</a
-                >. <a href="#ref1" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref2" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note2">
+            <li id="note3">
               <p>
                 &OpenCurlyDoubleQuote;Baltimore classification is a system used
                 to classify viruses based on their manner of messenger RNA
@@ -606,10 +642,10 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >Baltimore classification</a
-                >. <a href="#ref2" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref3" class="ref">Back to text &#8593;</a>
               </p>
             </li>
-            <li id="note3">
+            <li id="note4">
               <p>
                 <em
                   >If the virion carries two strands of RNA, why is HIV
@@ -635,11 +671,11 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >HIV-1 RNA Dimerization: It Takes Two to Tango</a
-                >. <a href="#ref3" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref4" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note4">
+            <li id="note5">
               <p>
                 dNTPs (deoxyribonucleotide triphosphates) are the molecular
                 precursors of DNA. For more information, see
@@ -648,11 +684,11 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >Nucleoside triphosphate</a
-                >. <a href="#ref4" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref5" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note5">
+            <li id="note6">
               <p>
                 For further details see
                 <a
@@ -660,11 +696,11 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >RNase H activity</a
-                >. <a href="#ref5" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref6" class="ref">Back to text &#8593;</a>
               </p>
             </li>
 
-            <li id="note6">
+            <li id="note7">
               <p>
                 Based on AK YouTube lecture notes
                 <a
@@ -672,7 +708,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   >HIV, AIDs and Helper T-cells</a
-                >. <a href="#ref6" class="ref">Back to text &#8593;</a>
+                >. <a href="#ref7" class="ref">Back to text &#8593;</a>
               </p>
             </li>
           </ol>
