Fixed a link, edited intro

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               </li>
               <li>
                 Its slow-acting nature means that its hosts are not aware of
-                being infected for significant amounts of time, allowing easy
-                spreading via sexual and oral fluid exchanges.
+                being infected for significant amounts of time, resulting in
+                unwitting transmission via e.g. blood, semen and breastmilk.
               </li>
               <li>
                 It integrates its own genome into that of the host cell's, thus
@@ -612,7 +612,7 @@
               <p>
                 See AVERT,
                 <a
-                  href="http://https://www.avert.org/global-hiv-and-aids-statistics"
+                  href="https://www.avert.org/global-hiv-and-aids-statistics"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Global HIV and AIDS statistics</a
