Added link to Baltimore Classification of Viruses (slideshow) in footer

--- a/index.html
+++ b/index.html
@@ -641,8 +641,14 @@
                   href="https://en.wikipedia.org/wiki/Baltimore_classification"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Baltimore classification</a
-                >. <a href="#ref3" class="ref">Back to text &#8593;</a>
+                  >Baltimore classification (Wikipedia)</a
+                >. For a slideshow (by the author of this page) see
+                <a
+                  href="https://chrisnajman.github.io/baltimore-classification/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Baltimore Classification of Viruses</a
+                >.<a href="#ref3" class="ref">Back to text &#8593;</a>
               </p>
             </li>
             <li id="note4">
