--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
               The central dogma of molecular biology
               <a href="#note2"><sup id="ref2">[2]</sup></a> states that genetic
               information moves in one direction only, from DNA to RNA to
-              protein. However, after the discovery in the 1970s of
-              <strong>reverse transcription</strong>, which converts RNA to DNA,
-              the dogma was restated as: once the biological information is
-              translated into protein, it is not possible to go the other way.
+              protein. However, in the 1970s the dogma had to be restated as
+              &OpenCurlyDoubleQuote;once the genomic information has been
+              translated into protein the process cannot be
+              reversed&CloseCurlyDoubleQuote;, or words to that effect. This
+              modification was warranted by the discovery of
+              <strong>reverse transcription</strong>, which converts RNA to DNA.
             </p>
             <p>
               <strong>Reverse transcriptase</strong> (RT), the enzyme that
