Added Related pages by the same author links to footer

--- a/index.html
+++ b/index.html
@@ -738,6 +738,44 @@
             </li>
           </ul>
         </section>
+        <section class="fit">
+          <h2>Related pages by the same author</h2>
+          <ul>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/baltimore-classification/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Baltimore Classification of Viruses</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://chrisnajman.github.io/sars-cov-2-covid-19-vaccines/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >SARS-CoV-2 and Covid-19 Vaccines</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/hardy-weinberg-equilibrium-model/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >The Hardy-Weinberg Equilibrium Model</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/genetic-drift/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Genetic Drift: Random Sampling</a
+              >
+            </li>
+          </ul>
+        </section>
       </footer>
     </div>
   </body>
